all main pages and routes set up. placeholder arrays of data populated

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,20 @@
     border: solid red 1px;
 }
 
+.cust-nav-link {
+    color: black
+}
+
 .spacer {
     height: 20vh;
+}
+
+.hero-title {
+    font-size: 3rem;
+}
+
+.hero-subtitle {
+    font-size: 1rem;
 }
 
 .hero-row {
