--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,25 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: solid red 1px;
+    /* border: solid red 1px; */
+}
+
+body {
+    padding-top: 70px
 }
 
 .cust-nav-link {
     color: black
 }
 
-.spacer {
-    height: 20vh;
-}
+
 
 .hero-title {
-    font-size: 3rem;
+    font-size: 5rem;
 }
 
 .hero-subtitle {
-    font-size: 1rem;
+    font-size: 2rem;
 }
 
 .hero-row {
